# fish-speech

./: pyproject.toml
docs/ar/: install.md
docs/en/: inference.md  install.md
docs/es/: install.md
docs/ja/: install.md
docs/ko/: install.md
docs/pt/: install.md
docs/zh/: install.md
examples/: inference_generate.py  inference_stream.py
faster_fish_speech/: __init__.py  api.py
fish_speech/: __init__.py  conversation.py  runtime.py
fish_speech/inference_engine/: __init__.py  reference_loader.py  vq_manager.py
fish_speech/models/dac/: inference.py
fish_speech/models/text2semantic/: cudagraphs.py  inference.py  llama.py
fish_speech/utils/: __init__.py  audio.py  utils.py
tools/: api_client.py  benchmark_faster_inference.py
tools/llama/: quantize.py
tools/vqgan/: extract_vq.py
