[project]
name = "faster-fish-speech"
version = "0.1.0"
authors = [
    {name = "Fish Audio", email = "oss@fish.audio"},
]
description = "Fish Speech with faster inference and hybrid quantization support"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["TTS", "Speech", "Fish Speech", "quantization", "inference"]
license = "LicenseRef-Fish-Audio-Research-License"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[project.optional-dependencies]
inference = [
    "click",
    "descript-audio-codec",
    "einops>=0.7.0",
    "hydra-core>=1.3.2",
    "huggingface-hub",
    "loguru>=0.6.0",
    "loralib>=0.1.2",
    "natsort>=8.4.0",
    "numpy",
    "pydantic>=2.9.2",
    "safetensors",
    "soundfile",
    "tiktoken>=0.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm",
    "transformers<=4.57.3",
]
api = [
    "cachetools",
    "kui>=1.6.0",
    "librosa>=0.10.1",
    "ormsgpack",
    "pydub",
    "pyrootutils>=1.0.4",
    "requests",
    "uvicorn>=0.30.0",
]
web = [
    "gradio>5.0.0",
    "pyrootutils>=1.0.4",
]
training = [
    "datasets>=2.18.0",
    "librosa>=0.10.1",
    "lightning>=2.1.0",
    "matplotlib",
    "protobuf>=3.20.0,<6.0.0",
    "pydub",
    "pyrootutils>=1.0.4",
    "rich>=13.5.3",
    "tensorboard>=2.14.1",
    "wandb>=0.19.0",
]
stable = [
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]
cpu = [
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
]
cu126 = [
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
]
cu128 = [
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
]
cu129 = [
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
]

[dependency-groups]
inference = [
    "click",
    "descript-audio-codec",
    "einops>=0.7.0",
    "hydra-core>=1.3.2",
    "huggingface-hub",
    "loguru>=0.6.0",
    "loralib>=0.1.2",
    "natsort>=8.4.0",
    "numpy",
    "pydantic>=2.9.2",
    "safetensors",
    "soundfile",
    "tiktoken>=0.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm",
    "transformers<=4.57.3",
]
api = [
    { include-group = "inference" },
    "cachetools",
    "kui>=1.6.0",
    "librosa>=0.10.1",
    "ormsgpack",
    "pydub",
    "pyrootutils>=1.0.4",
    "requests",
    "uvicorn>=0.30.0",
]
web = [
    { include-group = "inference" },
    "gradio>5.0.0",
    "pyrootutils>=1.0.4",
]
training = [
    { include-group = "inference" },
    "datasets>=2.18.0",
    "librosa>=0.10.1",
    "lightning>=2.1.0",
    "matplotlib",
    "protobuf>=3.20.0,<6.0.0",
    "pydub",
    "pyrootutils>=1.0.4",
    "rich>=13.5.3",
    "tensorboard>=2.14.1",
    "wandb>=0.19.0",
]

[tool.uv]
override-dependencies = [
    # descript-audiotools (transitive via descript-audio-codec) pins protobuf<3.20,
    # but fish-speech's generated proto code requires >=3.20; cap at <6 for API stability
    "protobuf>=3.20.0,<6.0.0",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu129" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fish_speech*", "faster_fish_speech*", "tools*"]

[tool.setuptools.package-data]
fish_speech = [
  "configs/*.yaml",
  "i18n/locale/*.json",
]
